# navigation2_stack

./: .gitignore  README.md
ceiling_perception/: CMakeLists.txt
ceiling_perception/config/: ceiling_perception_params.yaml
ceiling_perception/include/ceiling_perception/: ceiling_perception.h
ceiling_perception/src/: ceiling_perception.cpp  overhead_camera_manager.cpp
ceiling_segmentation/: setup.py
ceiling_segmentation/ceiling_segmentation/: main.py
ceiling_segmentation/ceiling_segmentation/UNET/: readme.md
ceiling_segmentation/ceiling_segmentation/UNET/VGG16/: Decoder.py  Encoder.py  EncoderDecoder.py  VGGBlockWithBN.py  VggBlock.py  main.py  predict.py  vgg16_train.py
ceiling_segmentation/ceiling_segmentation/utils/: LoadData.py
ceiling_segmentation/config/: ceiling_segmentation_params.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ceiling_perception/lib/ceiling_perception/: ceiling_perception_start
install/ceiling_perception/share/ceiling_perception/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ceiling_segmentation/lib/ceiling_segmentation/: ceiling_segmentation_start  inference  train
install/ceiling_segmentation/share/ceiling_segmentation/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/costmap_queue/share/costmap_queue/: package.ps1  package.sh
install/custom_msg_srv/share/custom_msg_srv/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/custom_roi_srv/share/custom_roi_srv/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dwb_core/share/dwb_core/: local_setup.sh  package.ps1  package.sh
install/dwb_critics/share/dwb_critics/: local_setup.sh  package.ps1  package.sh
install/dwb_msgs/share/dwb_msgs/: local_setup.sh  (+2 more)
log/: latest_build
navigation2/custom_msg_srv/: CMakeLists.txt  package.xml
navigation2/custom_roi_srv/: CMakeLists.txt  README.md
navigation2/doc/parameters/: param_list.md
navigation2/nav2_ceiling_perception_plugin/: CMakeLists.txt
navigation2/nav2_ceiling_perception_plugin/include/nav2_ceiling_perception_plugin/: ceiling_layer.hpp
navigation2/nav2_ceiling_perception_plugin/src/: ceiling_layer.cpp
navigation2/nav2_costmap_2d/: CMakeLists.txt
navigation2/nav2_costmap_2d/plugins/: inflation_layer.cpp  static_layer.cpp
navigation2/nav2_gradient_costmap_plugin/: CMakeLists.txt  gradient_layer.xml  package.xml
navigation2/nav2_gradient_costmap_plugin/src/: gradient_layer.cpp  overhead_camera.cpp
(+177 files in other folders)
